--- a/assets/stylesheets/modules/_intro.scss
+++ b/assets/stylesheets/modules/_intro.scss
@@ -2,11 +2,10 @@
   background: $hopbush;
   box-shadow: inset 0 1px 10px rgba(darken($hopbush,25%),.5);
 
-  // h1 {
-  //   color: $white;
-  //   margin-bottom: 0;
-  //   font-size: 6em;
-  // }
+  h1 {
+    color: $white;
+    margin-bottom: 0;
+  }
 
   // p.date {
   //   margin-top: 0;
